# uw_dyn

./: .gitignore  CLAUDE.md  LICENSE  PLAN.md  README.md  lancuch.blend  lancuch02.py  pyproject.toml  uw_dyn.py
docs/: ULEPSZENIA.md
przyklady/: balans.py  bokser.py  czworaka.py  dron.py  krok.py  lancuch02.py  piesek.py  pompka.py  przysiad.py  robot_kroczacy.py  transport_teren.py
src/uw_dyn/: __init__.py  algebra.py  antropometria.py  czlony.py  dynamika.py  sily.py  uklad.py  wiezy.py
tests/: conftest.py  test_algebra.py  test_antropometria.py  test_lancuch.py  test_matematyka.py  test_moment_max.py  test_ograniczniki.py  test_pid.py  test_rzutowanie.py  test_sily_nowe.py  test_staw_kulisty.py  test_sym3.py  test_wahadlo.py  test_wiezy_sily.py
web/: balans.html  bokser.html  czworaka.html  dane_balans.js  dane_bokser.js  dane_czworaka.js  dane_dron.js  dane_krok.js  dane_piesek.js  dane_pompka.js  dane_przysiad.js  dane_robot.js  dane_transport.js  dron.html  krok.html  piesek.html  pompka.html  przysiad.html  robot.html  transport.html
